<resources>
    <string name="app_name">Health_track</string>
    <string name="search">Search</string>
    <string name="accueil">Accueil</string>
    <string name="rechercher">Rechercher</string>
    <string name="notifications">Notifications</string>
    <string name="parametres">Paramètres</string>
    <string name="langue">Langue</string>
    <string name="choisir_langue">Choisir la langue</string>
    <string name="francais">Français</string>
    <string name="english">Anglais</string>
    <string name="anglais">Anglais</string>
    <string name="Français">Français</string>
    <string name="Langue">Langue</string>
    <string name="ok">OK</string>
    <string name="annuler">Annuler</string>
    <string name="undo">Annuler</string>
    <string name="save">Enregistrer</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="add">Ajouter</string>
    <string name="ajouter">Ajouter</string>
    <string name="moi">Moi</string>
    <string name="date">Date :</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="profile">Profil</string>
    <string name="profils">PROFILS</string>
    <string name="compte">Mon Compte</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="addprofile">Ajouter un profil</string>
    <string name="Ajouter_un_profil">Ajouter un profil</string>
    <string name="ajouter_profil">Ajouter un profil</string>
    <string name="ajout_nouveau_profil">Ajouter un nouveau profil</string>
    <string name="infcompte">INFORMATIONS DU COMPTE</string>
    <string name="INFORMATIONS_DU_COMPTE">INFORMATIONS DU COMPTE</string>
    <string name="deco">Se Déconnecter</string>
    <string name="pas_comptes">Vous n\'avez pas de compte ?</string>
    <string name="inscrire">S\'inscrire !</string>
    <string name="email">Email</string>
    <string name="mdp">Mot de Passe</string>
    <string name="Mot_de_Passe">Mot de Passe</string>
    <string name="connecter">Se connecter</string>
    <string name="se_connecter">Se connecter</string>
    <string name="oublie_mdp">Mot de passe oublié ?</string>
    <string name="connectez_pour_continuer">Connectez-vous pour continuer</string>
    <string name="creer_compte">Créer un compte</string>
    <string name="inscrivez_pour_commencer">Inscrivez-vous pour commencer</string>
    <string name="nom_complet">Nom complet</string>
    <string name="confirmer_mdp">Confirmer le mot de passe</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="accepter_conditions">J\'accepte les conditions d\'utilisation</string>
    <string name="deja_compte">Vous avez déjà un compte ?</string>
    <string name="mot_de_passe_consigne">Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscule et un chiffre.</string>
    <string name="connection_security">Connexion et Sécurité</string>
    <string name="profile_explanation">Ce profil est géré localement. Ajoutez un email et un mot de passe pour permettre la connexion.</string>
    <string name="change_password">Modifier le mot de passe</string>
    <string name="old_password">Ancien mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="title_new_profile">Nouvel Utilisateur</string>
    <string name="change_profile">Modifier le profil</string>
    <string name="btn_create_profile">Créer l\'utilisateur</string>
    <string name="modifier_email">Modifier l\'email</string>
    <string name="modifier_mot_de_passe">Modifier le mot de passe</string>
    <string name="nouvel_email">Nouvel email :</string>
    <string name="confirmer_email">Confirmer l\'email :</string>
    <string name="mot_de_passe_actuel">Mot de passe actuel :</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe :</string>
    <string name="confirmer_nouveau_mot_de_passe">Confirmer le nouveau mot de passe :</string>
    <string name="champs_vides">Veuillez remplir tous les champs</string>
    <string name="remplir_champs">Veuillez remplir tous les champs</string>
    <string name="emails_ne_correspondent_pas">Les emails ne correspondent pas</string>
    <string name="format_email_invalide">Format d\'email invalide</string>
    <string name="email_modifie_succes">Email modifié avec succès</string>
    <string name="mot_de_passe_actuel_incorrect">Mot de passe actuel incorrect</string>
    <string name="mots_de_passe_ne_correspondent_pas">Les mots de passe ne correspondent pas</string>
    <string name="mot_de_passe_trop_court">Le mot de passe doit contenir au moins 8 caractères</string>
    <string name="mot_de_passe_modifie_succes">Mot de passe modifié avec succès</string>
    <string name="aucun_email">Aucun email spécifié</string>
    <string name="erreur_profil_introuvable">Erreur : Profil introuvable</string>
    <string name="medicaments_du_jour">Médicaments du jour</string>
    <string name="medicaments_du_date">Médicaments du %1$s</string>
    <string name="medicaments">Médicaments</string>
    <string name="ordonnances">Ordonnances</string>
    <string name="ordonnance">Ordonnance</string>
    <string name="mes_ordonnances">Mes Ordonnances</string>
    <string name="pathologie">Pathologie</string>
    <string name="en_cours_de_developpement">En cours de développement</string>
    <string name="fonctionnalite_bientot_disponible">Cette fonctionnalité sera bientôt disponible</string>
    <string name="sommeil">Sommeil</string>
    <string name="scan_ordonnance">Scanner une ordonnance</string>
    <string name="saisir_medoc">Saisir des médicaments</string>
    <string name="saisir_medoc_plus">Saisissez les médicaments de votre prescription à la main ou en passant par le scan d\'ordonnance :</string>
    <string name="mes_traitements">Mes Traitements</string>
    <string name="traitements_profil">Traitements du profil</string>
    <string name="aucun_traitement">Aucun traitement en cours</string>
    <string name="ajouter_traitements">Ajoutez vos traitements pour commencer</string>
    <string name="traitements">Traitements :</string>
    <string name="Traitements">Traitements :</string>
    <string name="aucun_traitement_detail">Aucun traitement</string>
    <string name="aucun_detail">Aucun détail disponible</string>
    <string name="add_traitement">Ajouter au traitement</string>
    <string name="btn_add_treatment">Ajouter au traitement</string>
    <string name="classe_therapeutique">Classe thérapeutique</string>
    <string name="Classe_thérapeutique">Classe thérapeutique</string>
    <string name="label_therapeutic_class">Classe thérapeutique</string>
    <string name="voies_administration">Voies d\'administration</string>
    <string name="Voies_dadministration">Voies d\'administration</string>
    <string name="label_administration_routes">Voies d\'administration</string>
    <string name="presentations_disponibles">Présentations disponibles</string>
    <string name="Présentations">Présentations disponibles</string>
    <string name="label_presentations">Présentations</string>
    <string name="non_disponible">Non disponible</string>
    <string name="posologie">Posologie :</string>
    <string name="substance_inconnue">Substance inconnue</string>
    <string name="unknown_substance">Substance inconnue</string>
    <string name="non_specifiee">Non spécifiée</string>
    <string name="non_specifiees">Non spécifiées</string>
    <string name="aucune_presentation">Aucune présentation disponible</string>
    <string name="Antalgique_Antipyrétique">Antalgique / Antipyrétique</string>
    <string name="unknown_atc">Code ATC non spécifié</string>
    <string name="unknown_form">Forme inconnue</string>
    <string name="format_presentation_full">%1$s\n(Code CIP: %2$s)\nForme : %3$s</string>
    <string name="placeholder_drug_name">Nom du médicament</string>
    <string name="add_treatment_title_duration">Durée du traitement</string>
    <string name="add_treatment_hint_start_date">Date de début</string>
    <string name="add_treatment_hint_end_date">Date de fin (Optionnel)</string>
    <string name="add_treatment_title_frequency">Fréquence des prises</string>
    <string name="add_treatment_hour">Heures des prises</string>
    <string name="add_treatment_btn_add_time">+ Ajouter une heure de prise</string>
    <string name="add_treatment_hint_instructions">Instructions (ex: Pendant le repas)</string>
    <string name="add_treatment_btn_validate">Valider le traitement</string>
    <string name="edit_treatment_title">Modification du traitement</string>
    <string name="edit_treatment_btn">Modifier le traitement</string>
    <string name="pour_qui">Pour qui ?</string>
    <string name="every">Tous les</string>
    <string name="_1">1</string>
    <string name="format_treatment_date">Du %1$s au %2$s</string>
    <string name="treatment_date_indefinite">Indéterminé</string>
    <string name="label_no_instructions">Aucune instruction particulière</string>
    <string name="rappels">Rappels</string>
    <string name="heures_rappel">Heures de rappel</string>
    <string name="ajouter_heure">Ajouter une heure</string>
    <string name="janvier_2024">Janvier 2024</string>
    <string name="lundi_court">L</string>
    <string name="mardi_court">M</string>
    <string name="mercredi_court">M</string>
    <string name="jeudi_court">J</string>
    <string name="vendredi_court">V</string>
    <string name="samedi_court">S</string>
    <string name="dimanche_court">D</string>
    <string name="reminder_default_time">08:00</string>
    <string name="reminder_hint_quantity">Qte</string>
    <string name="reminder_desc_delete">Supprimer cette prise</string>
    <string name="preferences">PRÉFÉRENCES</string>
    <string name="PRÉFÉRENCES">PRÉFÉRENCES</string>
    <string name="donnees">DONNÉES</string>
    <string name="DONNÉES">DONNÉES</string>
    <string name="exporter_donnees">Exporter les données</string>
    <string name="Exporter_les_données">Exporter les données</string>
    <string name="role">Rôle :</string>
    <string name="role_hint">Ex: Conjoint, Fille, etc</string>
    <string name="ex">Ex: Conjoint, Fille, etc</string>
    <string name="nom">Nom :</string>
    <string name="Nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="Prenom">Prénom :</string>
    <string name="hint_lastname">Nom de famille</string>
    <string name="hint_firstname">Prénom</string>
    <string name="hint_relation">Relation</string>
    <string name="birthdate">Date de naissance</string>
    <string name="profil_ajoute">Profil ajouté : %1$s %2$s</string>
    <string name="profil_default_name">Utilisateur sans nom</string>
    <string name="desc_avatar_user">Avatar de l\'utilisateur</string>
    <string name="desc_arrow_details">Voir les détails du profil</string>
    <string name="desc_delete_treatment">Supprimer ce traitement</string>
    <string name="desc_icon_calendar">Icône calendrier</string>
    <string name="desc_icon_instruction">Icône instruction</string>
    <string name="previous_month">Mois précédent</string>
    <string name="month_year_example">Janvier 2024</string>
    <string name="next_month">Mois prochain</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="J">J</string>
    <string name="V">V</string>
    <string name="btn_back">Retour</string>
    <string name="select_medicament_title">Sélectionner un médicament</string>
    <string name="select_medicament_empty">Aucun médicament trouvé</string>
    <string name="urgence_title">Urgence</string>
    <string name="informations_symptome"><![CDATA[Informations symptômes & signalement]]></string>
    <string name="consult_ansm">Consulter l\'ANSM</string>
    <string name="icone_info">Icone info</string>
    <string name="appeler_le_112">Appeler le 112 (Urgences)</string>
    <string name="icone_tel">Icone téléphone</string>
    <string name="que_souhaitez_vous_faire">Que souhaitez-vous faire ?</string>
</resources>