<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnTime"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_default_time" />

    <EditText
        android:id="@+id/etDose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:hint="@string/reminder_hint_quantity"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/reminder_desc_delete"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="#757575" />
</LinearLayout>